--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookiefile": "^1.0.10",
+    "form-data": "^4.0.1",
+    "nestjs-form-data": "^1.9.92",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^11.0.5"
@@ -38,6 +40,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
